# python-hvac

./: .gitignore  LICENSE.md  README.md  environment.yml  pyproject.toml
docs/examples/air_conditioning/: airco_proc_02.ipynb
docs/examples/air_cooling_coil/: air_cooling_coil_01.ipynb  air_cooling_coil_02.ipynb  (+3 more)
hvac/: __init__.py  logging.py  misc.py  pint_setup.py
hvac/air_conditioning/: __init__.py
hvac/air_diffusion/: __init__.py
hvac/charts/: __init__.py  log_ph_diagram.py  psychrometric_chart.py
hvac/climate/: __init__.py  climate_data.py  tmy.py
hvac/control/: controller.py
hvac/cooling_load_calc/: __init__.py
hvac/cooling_load_calc_old/: __init__.py
hvac/energy_estimation/: __init__.py  bin_table.py  energy_estimation.py  heat_pump.py  load.py
hvac/fluid_flow/: __init__.py
hvac/fluids/: __init__.py  exceptions.py  fluid.py  fluid_experimental.py  humid_air.py
hvac/heating_load_calc/: __init__.py
hvac/hydronics/: expansion_tank.py
hvac/kitchen_ventilation/: __init__.py  detailed_calculation.py  preliminary_calculation.py
hvac/radiant_emitter/: __init__.py  panel_radiator.py  radiant_floor.py
hvac/refrigerant_piping/: __init__.py  copper_fittings.py  copper_tubing.py  sizing.py
hvac/sun/: __init__.py  clear_sky.py  correlation.py  geometry.py  radiation.py  shading.py  sun_chart.py  surface.py  time.py  tmy.py  transposition.py  utilizability.py
hvac/vapor_compression/: __init__.py  capillary_tube.py  condensing_unit.py  machine.py  machine_bis.py  real_compressor.py  reciprocating_compressor.py  refrigerant_lines.py
hvac/vrf_system/: __init__.py  energy_estimation.py  indoor_unit.py  model.py  vrf.py
node_equations/: linear_thermal_network.ods  node_equations.wpd
python_hvac/: logging.py  pint_setup.py
python_hvac/climate/: climate_data.py
python_hvac/energy_estimation/: energy_estimation.py  heat_pump.py  load.py
python_hvac/fluid_flow/: __init__.py
python_hvac/fluids/: __init__.py  constants.py  ice.py  water.py
python_hvac/heating_load_calc/: __init__.py
python_hvac/refrigerant_piping/: __init__.py  sizing.py
python_hvac/vapor_compression/: real_compressor.py  reciprocating_compressor.py
python_hvac/vrf_system/: energy_estimation.py  vrf.py
testing/vapor_compression_08/: cmp_rating.py  cnd_rating.py  evp_rating.py
testing/vapor_compression_09/: evp_rating.py
(+582 files in other folders)
