[tool.poetry]
name = "python-hvac"
version = "0.1.0"
description = "A package for HVAC engineering"
authors = ["Tom Christiaens <tom.chr@proximus.be>"]
readme = "README.md"
packages = [{include = "hvac"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
coolprop = ">=6.4.3.post1"
scipy = ">=1.10.1"
matplotlib = ">=3.7.1"
pandas = ">=1.5.3"
sympy = ">=1.11.1"
astral = ">=3.2"
iapws = ">=1.5.3"
dill = ">=0.3.6"
pint = ">=0.20.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = ">=3.5.0"
jupyter-lsp = "^2.0.1"
jupyterlab-lsp = "^4.0.1"
python-lsp-server = "^1.7.1"
jupyterlab-spellchecker = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
