[tool.poetry]
name = "python-hvac"
version = "0.1.1"
description = "A package for HVAC engineering"
authors = ["Tom Christiaens <tom.chr@proximus.be>"]
readme = "README.md"
packages = [{include = "hvac"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
coolprop = ">=6.4.3.post1"
scipy = ">=1.10.1"
matplotlib = ">=3.7.1"
pandas = ">=1.5.3"
sympy = ">=1.11.1"
astral = ">=3.2"
iapws = ">=1.5.3"
dill = ">=0.3.6"
pint = ">=0.20.1"
odfpy = "^1.4.1"
multiprocess = "^0.70.14"
lmfit = "^1.2.2"
mpld3 = "^0.5.9"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.0"
jupyterlab-lsp = "^4.2.0"
jupyter-lsp = "^2.2.0"
python-lsp-server = { version = "^1.7.4", extras = ["all"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
