[tool.poetry]
name = "python-hvac"
version = "0.1.3"
description = "A package for HVAC engineering"
authors = ["Tom Christiaens <tom.chr@proximus.be>"]
readme = "README.md"
packages = [{include = "hvac"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
coolprop = ">=6.4.3.post1"
scipy = ">=1.10.1"
pandas = ">=1.5.3"
sympy = ">=1.11.1"
astral = ">=3.2"
iapws = ">=1.5.3"
dill = ">=0.3.6"
pint = ">=0.20.1"
odfpy = ">=1.4.1"
multiprocess = ">=0.70.14"
lmfit = ">=1.2.2"
mpld3 = ">=0.5.9"
pyarrow = ">=15.0.0"
openpyxl = ">=3.1.2"
numdifftools = ">=0.9.41"
control = "^0.10.1"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
